Moved text drawing specifics to controller

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 				<li>
 					<!-- Scripts -->
 					<ul class="uk-tab" data-uk-tab="{connect:'#script-tabs'}">
-						<li class="uk-active"><a href="">Mode scripts</a></li>
+						<li class="uk-active"><a href="">Modes</a></li>
 						<li><a href="">Display scripts</a></li>
 						<li><a href="">Data scripts</a></li>
 					</ul>
