--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,38 @@
 					</ul>
 
 					<ul class="uk-switcher uk-margin uk-height-1-1" id="script-tabs">
-						<li><modeeditor></modeeditor></li>
-						<li><scripteditor id="dsp-scripteditor"></scripteditor></li>
-						<li><scripteditor id="data-scripteditor"></scripteditor></li>
+						<li>
+							<modeeditor>
+								Each <strong>Display Mode</strong> is a list of display script references.
+								Each display script reference have separate configurations as simple json documents
+								that is used to set up each display script before animation starts.
+							</modeeditor>
+						</li>
+						<li>
+							<scripteditor id="dsp-scripteditor">
+								<strong>Display scripts</strong> do all the dot flipping on the display.<br/>
+								All scripts must define a variable <q>code</q> holding the class that is used to draw.
+								The class must define <q>onSetup(configuration, dataSource)</q> and
+								<q>onFrame(oldFrame, timePassedInSeconds, frameCallback)</q> methods.
+								The class is instantiated once for each reference in mode definitions.
+								The <q>onSetup</q> method is called when animation starts, followed
+								by repeated calls to <q>onFrame</q>.
+								The configuration parameter is the passed from the display mode json config, and the 
+								dataSource holds all data defined by data scripts.
+								Calling the provided <q>frameCallback(updatedFrame, milliSecondsToNextFrame)</q>
+								from <q>onFrame</q> updates the display and retriggers another call if
+								milliSecondsToNextFrame is non-zero.
+							</scripteditor>
+						</li>
+						<li>
+							<scripteditor id="data-scripteditor">
+								<strong>Data scripts</strong> define the data that display scripts can use to update the display.
+								All scripts must define a variable <q>code</q> holding the class that is called to generate data.
+								The class must define a method <q>onUpdate</q> that returns the updated data.
+								The data returned is stored in the data source storage using the data script name as a key.
+								The data source storage is passed as the second argument to the display script <q>onSetup</q> method.
+							</scripteditor>
+						</li>
 					</ul>
 				</li>
 				<li>
@@ -86,12 +115,21 @@
 					"set": "setscript",
 					"delete": "deletescript"
 				},
-				"info": "Display scripts do all the dot flipping on the display. " + 
-					"Flip flop non stop. " +
-					"All scripts must define a variable 'code' holding the class that is called to draw. " +
-					"The class must define 'onSetup(configuration, dataSource)' and " +
-					"'onFrame(oldFrame, timePassedInSeconds, frameCallback)' methods. " +
-					"The frameCallback is called with (updatedFrame, milliSecondsToNextFrame)."
+				"template": '"use strict";\nvar code = class {\n' + 
+				'	onSetup(configuration, dataSource){\n' +
+				'		// set properties of this animation script\n' +
+ 				'		// pull data from data source\n' +
+ 				'		// set up animation\n' +
+ 				'	}\n' +
+ 				'	onFrame(oldFrame, timePassedInSeconds, frameCallback){\n' +
+				'		// calculate one frame of animation\n' +
+				'		// ...\n' +
+				'		// call frameCallback with updated frame data and ms to next callback\n' +
+				'		// Providing no callback time ends the script.\n' +
+				'		//\n' +
+				'		// frameCallback(updatedFrame, 1000);\n' +
+				' 	}\n' +
+				'};\n'
 			});
 			var dataEditor = riot.mount('#data-scripteditor', {
 				"socket": socket,
@@ -101,10 +139,16 @@
 					"set": "setdatascript",
 					"delete": "deletedatascript"
 				},
-				"template": "var code = {\n};",
-				"info": "Data scripts define the data that display scripts can use to update the display. " +
-				"All scripts must define a variable 'code' holding the class that is called to generate data. " +
-				"The class must define a method 'onUpdate' that returns the updated data."
+				"template": '"use strict";\nvar code = class {\n' + 
+				'	constructor(){\n' +
+				'		// set up stuff\n' +
+ 				'	}\n' +
+ 				'	onUpdate(){\n' +
+				'		// get fresh data\n' +
+				'		// ...\n' +
+				'		// return data object\n' +
+				' 	}\n' +
+				'};\n'
 			});
 
 		});
