Added font list, changed "setup" to "advanced"

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 		<ul class="uk-navbar-nav" data-uk-switcher="{connect:'#display_views'}">
 			<li><a href=""><i class="uk-icon-tv"></i> Live</a></li>
 			<li><a href=""><i class="uk-icon-files-o"></i> Scripts</a></li>
-			<li><a href=""><i class="uk-icon-cogs"></i> Setup</a></li>
+			<li><a href=""><i class="uk-icon-flask"></i> "Advanced"</a></li>
 		</ul>
 	</nav>
 	<div data-uk-observe class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
