--- a/public/index.html
+++ b/public/index.html
@@ -76,11 +76,11 @@
 											<dt>console</dt><dd>Console that writes to the script log in the "Advanced" tab</dd>
 											<dt>width</dt><dd>Width of the display in dots</dd>
 											<dt>height</dt><dd>Height of the display in dots</dd>
+											<dt>MonoBitmap</dt><dd>Bitmap class for drawing to the display</dd>
 											<dt>drawText(bmp, x, y, text, font)<dt><dd>Draws text to a MonoBitmap</dd>
 											<dt>getTextBitmap(text, font)</dt><dd>Returns a MonoBitmap containing the complete text</dd>
 										</dl>
-<pre><code>const MonoBitmap = require('./monobitmap');
-var bmp = new MonoBitmap(width, height);
+<pre><code>var bmp = new MonoBitmap(width, height);
 </code></pre>
 									</p>
 								</div>
@@ -133,8 +133,8 @@ var bmp = new MonoBitmap(width, height);
 	<script src="/js/bundle.js"/></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"/></script>
-	<script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script>
-	<!--script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.3.13/riot+compiler.min.js"></script-->
+	<!--script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.3.13/riot+compiler.min.js"></script>
 	<script src="liveview.js" type="riot/tag"></script>
 	<script src="modeselector.js" type="riot/tag"></script>
 	<script src="modeeditor.js" type="riot/tag"></script>
