--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
 
 	<title>FlipDisc controller</title>
 
-	<link rel="stylesheet" href="uikit/css/uikit.gradient.css" />
-	<link rel="stylesheet" href="uikit/css/components/sortable.gradient.css" />
-	<link rel="stylesheet" href="uikit/css/components/notify.gradient.css" />
+	<link rel="stylesheet" href="/uikit/css/uikit.gradient.css" />
+	<link rel="stylesheet" href="/uikit/css/components/sortable.gradient.css" />
+	<link rel="stylesheet" href="/uikit/css/components/notify.gradient.css" />
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="uikit/js/uikit.js"></script>
