Added jsdoc to help tab

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 			<li><a href=""><i class="uk-icon-tv"></i> Live</a></li>
 			<li><a href=""><i class="uk-icon-files-o"></i> Scripts</a></li>
 			<li><a href=""><i class="uk-icon-flask"></i> "Advanced"</a></li>
+			<li><a href=""><i class="uk-icon-life-ring"></i> Help</a></li>
 		</ul>
 	</nav>
 	<div data-uk-observe class="uk-container uk-container-center uk-margin-top uk-margin-large-bottom">
@@ -125,6 +126,12 @@
 						<setup class="uk-width-1-1"></setup>
 					</div>
 				</li>
+				<li class="uk-height-1-1">
+					<!-- Help -->
+					<div class="uk-container uk-height-1-1">
+						<iframe style="display:block; border:none; height:100vh; width:100%;" seamless="seamless" src="/doc/index.html"></iframe>
+					</div>
+				</li>
 			</ul>
 		</div>
 	</div>
@@ -133,7 +140,6 @@
 	<script src="/js/bundle.js"/></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"/></script>
-	<!--script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.3.13/riot+compiler.min.js"></script>
 	<script src="liveview.js" type="riot/tag"></script>
 	<script src="modeselector.js" type="riot/tag"></script>
