Tiny comment addition

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
 						<li>
 							<modeeditor>
 								<strong>Display Modes</strong> are lists of display script references.
+								The list is played through repeatedly while the mode is active.
 								Each display script reference has a simple json configuration
 								that is used to set up the display script before animation starts.
 							</modeeditor>
@@ -133,7 +134,6 @@
 	<script src="/js/bundle.js"/></script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"/></script>
-	<!--script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.3.13/riot+compiler.min.js"></script>
 	<script src="liveview.js" type="riot/tag"></script>
 	<script src="modeselector.js" type="riot/tag"></script>
