Moved to riotify to get babelification on riot tags

--- a/public/index.html
+++ b/public/index.html
@@ -138,68 +138,22 @@
 	</div>
 
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="/js/bundle.js"/></script>
+	<script>
+		var socket = io();
+	</script>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.2/ace.js"/></script>
+	<script src="/js/bundle.js"/></script>
+	<!--
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.3.13/riot+compiler.min.js"></script>
 	<script src="liveview.js" type="riot/tag"></script>
 	<script src="modeselector.js" type="riot/tag"></script>
 	<script src="modeeditor.js" type="riot/tag"></script>
 	<script src="scripteditor.js" type="riot/tag"></script>
 	<script src="setup.js" type="riot/tag"></script>
+	-->
 
 	<script>
-		var socket = io();
-
-		riot.compile(function() {
-			riot.mount('liveview, modeselector, modeeditor, setup', socket);
-			var scriptEditor = riot.mount('#dsp-scripteditor', {
-				"socket": socket,
-				"title": "Display scripts",
-				"events": {
-					"update": "scriptschanged",
-					"set": "setscript",
-					"delete": "deletescript"
-				},
-				"template": '"use strict";\nvar code = class {\n' + 
-				'	onSetup(configuration, dataSource){\n' +
-				'		// set properties of this animation script\n' +
- 				'		// pull data from data source\n' +
- 				'		// set up animation\n' +
- 				'	}\n' +
- 				'	onFrame(oldFrame, timePassedInSeconds, frameCallback){\n' +
-				'		// calculate one frame of animation\n' +
-				'		// ...\n' +
-				'		// call frameCallback with updated frame data and ms to next callback\n' +
-				'		// Providing no callback time ends the script.\n' +
-				'		//\n' +
-				'		// frameCallback(updatedFrame, 1000);\n' +
-				' 	}\n' +
-				'};\n'
-			});
-			var dataEditor = riot.mount('#data-scripteditor', {
-				"socket": socket,
-				"title": "Data scripts",
-				"events": {
-					"update": "datascriptschanged",
-					"set": "setdatascript",
-					"delete": "deletedatascript",
-					"result": "data"
-				},
-				"template": '"use strict";\nvar code = class {\n' + 
-				'	constructor(){\n' +
-				'		// set up stuff\n' +
- 				'	}\n' +
- 				'	onUpdate(){\n' +
-				'		// get fresh data\n' +
-				'		// ...\n' +
-				'		// return data object\n' +
-				' 	}\n' +
-				'};\n'
-			});
-
-		});
-
 		socket.on('notification', function(message){
 			UIkit.notify(message);
 		});
