--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 									<strong>Display scripts</strong> do all the dot flipping.<br/>
 									All scripts must define a variable <q>code</q>, holding the class that is used to draw.
 									The class must define <q>onSetup(configuration, dataSource)</q> and
-									<q>onFrame(oldFrame, timePassedInSeconds, frameCallback)</q> methods.
+									<q>onFrame(oldFrame, timePassedInSeconds)</q> methods.
 									The <q>onSetup</q> method is called when animation starts, followed
 									by repeated calls to <q>onFrame</q>.
 								</p>
@@ -72,9 +72,9 @@
 									<p>
 										The <q>configuration</q> parameter contains the display mode json config, and the 
 										dataSource holds all data defined by data scripts.
-										Calling the provided <q>frameCallback(updatedFrame, milliSecondsToNextFrame)</q>
-										from <q>onFrame</q> updates the display and retriggers another call if
-										milliSecondsToNextFrame is non-zero.
+										Updating the <q>oldFrame</q> passed to <q>onFrame</q>
+										updates the display. Return non-zero value to retrigger another callback
+										in that many milliseconds.
 									</p>
 									<p>
 										The following globals are available to display scripts:
@@ -113,7 +113,7 @@
 									</p>
 									<p>
 										All Node.js core modules are available, as well as the
-										<a href="http://unirest.io/nodejs.html" target="_blank">"unirest"</a>
+										<a href="https://www.npmjs.com/package/request" target="_blank">"request"</a>
 										and <a href="http://csv.adaltas.com/parse/" target="_blank">"csv-parse"</a> modules.
 									</p>
 								</div>
